feat: add verbose flag to operate backup list API to improve performance
Adding verbose to the request sent to ES/OS speeds up the query by a
lot, but we don't get startTime and metadata fields populated.
startTime will be null, while metadata can be extracted from the
snapshot name if metadata field is missing.
closes #30695

(cherry picked from commit fe1e6e30eab1fb124d87d4a0a4811d0e24428f44)